--- a/general_website/templates/general_website/chart.html
+++ b/general_website/templates/general_website/chart.html
@@ -389,5 +389,5 @@
         {% endif %}
     });
 </script>
-
+<link rel="stylesheet" href="{% static 'general_website/css/restyle-tooltips.css' %}" />
 {% endblock %}
