update faq for dragonflight season 1

--- a/general_website/templates/general_website/faq.html
+++ b/general_website/templates/general_website/faq.html
@@ -16,10 +16,10 @@
         </p>
         <p>
             As with all prepared information, the exact context of your character is missing and that can change
-            the outcome. Patrons of this project are able to create their own custom charts with their own character
-            input. This way they can get a for them specific overview.
+            the outcome. <a href="https://www.patreon.com/bloodmallet">Patrons</a> of this project are able to create
+            their own custom charts with their own character input. This way they can get a for them specific overview.
         </p>
-        <p>If you enjoy this resource and want to see it continued, or want to create your own charts? Become a Patron:
+        <p>If you enjoy this resource and want to create your own charts? Become a Patron:
         </p>
         <a href="https://www.patreon.com/bloodmallet">
             <img src="{% static 'general_website/assets/become_a_patron_button.png' %}"
@@ -41,27 +41,32 @@
                 <tr>
                     <th scope="col">Setting</th>
                     <th scope="col">CastingPatchwerk</th>
-                    <th scope="col">HecticAddCleave</th>
+                    <th scope="col">~ 3</th>
+                    <th scope="col">~ 5</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th scope="row">Profile/Tier</th>
-                    <td>T28 (Sepulcher of the First Ones)</td>
-                    <td>T28 (Sepulcher of the First Ones)</td>
+                    <td>T29 (Vault of the Incarnates)</td>
+                    <td>T29 (Vault of the Incarnates)</td>
+                    <td>T29 (Vault of the Incarnates)</td>
                 </tr>
                 <tr>
                     <th scope="row">Iterations</th>
+                    <td>20000 (sufficient to reach target_error)</td>
                     <td>20000 (sufficient to reach target_error)</td>
                     <td>20000 (sufficient to reach target_error)</td>
                 </tr>
                 <tr>
                     <th scope="row">Target Error</th>
                     <td>0.1%</td>
-                    <td>0.2%</td>
+                    <td>0.1%</td>
+                    <td>0.1%</td>
                 </tr>
                 <tr>
                     <th scope="row">Max Time</th>
+                    <td>300 seconds</td>
                     <td>300 seconds</td>
                     <td>300 seconds</td>
                 </tr>
@@ -69,9 +74,11 @@
                     <th scope="row">Vary Combat Length</th>
                     <td>20%</td>
                     <td>20%</td>
+                    <td>20%</td>
                 </tr>
                 <tr>
                     <th scope="row">Fixed Time</th>
+                    <td>true</td>
                     <td>true</td>
                     <td>true</td>
                 </tr>
@@ -79,14 +86,17 @@
                     <th scope="row">Default Actions</th>
                     <td>true</td>
                     <td>true</td>
+                    <td>true</td>
                 </tr>
                 <tr>
                     <th scope="row">Optimize Expressions</th>
                     <td>true</td>
                     <td>true</td>
+                    <td>true</td>
                 </tr>
                 <tr>
                     <th scope="row">Ready Trigger</th>
+                    <td>true</td>
                     <td>true</td>
                     <td>true</td>
                 </tr>
@@ -102,10 +112,9 @@
     <div class="offset-md-1 col-md-10 mt-5">
         <h2 id="trusting-these-charts" class="faq-question">Can I trust the general charts?</h2>
         <p>
-            Yes-ish - they offer an overview. Your own equipment (e.g. legendary and trinkets) and talents make
-            your character unique.
-            Therefore, simming your own character is the most effective way to know which performs best. Become a patron
-            to be able to create your own custom charts specific to your character.
+            Yes-ish - they offer an overview. Your own equipment (e.g. trinkets) and talents make your character unique.
+            Therefore, simulating your own character is the most effective way to know which performs best. Become a
+            patron to be able to create your own custom charts specific to your character.
         </p>
     </div>
     <div class="offset-md-1 col-md-10 mt-5">
@@ -115,8 +124,9 @@
             bloodmallet.com would like to use <a
                 href="https://support.google.com/analytics/answer/2763052">anonymized</a> <a
                 href="https://marketingplatform.google.com/about/analytics/">Google Analytics (GA)</a>, to know how many
-            people are using the website. You can either accept or reject this. Your choice will be saved on your device
-            in a cookie.
+            people are using the website. You can either accept or reject this. Accepting will enable google analytics
+            for your visit and as long as your choice persists. Your choice will be saved on your device
+            in a cookie. You can always return here to enable or disable google analytics.
             {% endblocktranslate %}
         </p>
         <div class="btn-group float-right">
@@ -134,8 +144,7 @@
             to show data. Screenshots tend to quickly become outdated. Instead have a look at this <a
                 href="https://github.com/Bloodmallet/bloodmallet_web_frontend/wiki/How-to-import-charts">guide on how to
                 import charts</a>. With this you can very easily add any chart you want to your page directly and always
-            get the most up to date information. A shoutout to where you get the data from and some support would be
-            appreciated. Or: Link directly to
+            get the most up to date information. A shout-out and some support would be appreciated. Or: Link directly to
             <code>bloodmallet.com/chart/shaman/elemental/trinkets/castingpatchwerk</code> and let your
             users explore charts here.
         </p>
