--- a/general_website/templates/general_website/chart_information/disclaimers/tier_set_death_knight_frost.html
+++ b/general_website/templates/general_website/chart_information/disclaimers/tier_set_death_knight_frost.html
@@ -1,4 +1,5 @@
+<!-- Example file. -->
+<!-- Name needs to be "<SIMULATION_TYPE>_<WOW_CLASS>_<WOW_SPEC>.html" -->
 <div class="alert alert-warning" role="alert">
-    Frost Death Knight Tier Set value looks bloated because the profile uses a normal enchant instead of the Razorice
-    Runeforge. A more realistic comparison would be of 4-set without Razorice vs no set with Razorice.
+    Your specific disclaimer.
 </div>
