add idol warning

--- a/general_website/templates/general_website/chart_information/simulation_type/trinkets.html
+++ b/general_website/templates/general_website/chart_information/simulation_type/trinkets.html
@@ -16,6 +16,11 @@
     Versatility amount is equipped. This profile is the base profile. For each trinket and trinket itemlevel you see
     above a new profile is created.
 </p>
+<p>
+    Warning about Idols:<br />
+    In case your profile does not have any gems, or uses the same gem in all available slots Idols won't simulate
+    properly. They require different gems to proc their different stats.
+</p>
 
 <pre>
 # SimulatonCraft example override
