--- a/general_website/templates/general_website/layout/nav_top.html
+++ b/general_website/templates/general_website/layout/nav_top.html
@@ -30,6 +30,7 @@
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="{% url 'talent_trees' %}">{% translate "Dragonflight: Talent trees" %}</a>
                 </li> -->
+                <a class="nav-link" href="{% url 'chart_windfury_totem' %}">{% translate "🌪️Windfury Totem🌪️" %}</a>
             </ul>
 
 
