--- a/general_website/templates/general_website/chart_information/class_and_spec_information_importer.html
+++ b/general_website/templates/general_website/chart_information/class_and_spec_information_importer.html
@@ -16,3 +16,7 @@ example import of simulation type and spec specific disclaimer
 {% include 'general_website/chart_information/disclaimers/tier_set_death_knight_frost.html' %}
 {% endif %}
 {% endcomment %}
+
+{% if windfury %}
+{% include 'general_website/chart_information/disclaimers/windfury_totem.html' %}
+{% endif %}
