--- a/general_website/templates/general_website/layout/nav_bottom.html
+++ b/general_website/templates/general_website/layout/nav_bottom.html
@@ -50,6 +50,11 @@
 
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'handbook' %}">
+                        {% translate "Handbook" %}
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'faq' %}">
                         {% translate "FAQ" %}
                     </a>
