fix spelling issues, add introduction paragraph

--- a/general_website/templates/general_website/handbook.html
+++ b/general_website/templates/general_website/handbook.html
@@ -7,6 +7,13 @@
 
 <h1 class=" display-4 mb-5 text-center">{% translate 'Handbook' %}</h1>
 
+<p>
+    This page is for Theorycrafters and Guide writers who want to ensure the data shown on bloodmallet.com is valuable
+    and as correct as possible. The page describes prepared features you can use to reach this goal. Please create <a
+        href="https://github.com/Bloodmallet/bloodmallet_web_frontend/issues">feature request tickets</a> describing
+    what would help you/your spec.
+</p>
+
 <ul>
     <li><a href="#notes-above-charts">Notes above charts</a></li>
     <li><a href="#embeds">Embeds</a></li>
@@ -117,7 +124,7 @@
     <p>
         In general the most recent Tier profiles from the open source project <a
             href="https://github.com/simulationcraft/simc/tree/dragonflight/profiles">SimulationCraft [simc]</a> are
-        being used to generate data. Therefore keeping those profiles up to date is your fastes way to update data.
+        being used to generate data. Therefore keeping those profiles up to date is your fastest way to update data.
         As with all open source projects, you can contribute to it. Contact your spec maintainer (usually in your spec
         discord) to get in contact with the project.
     </p>
@@ -194,7 +201,7 @@
             files [bloodytools]</a>. Each file provides a usage example. You can use any combination of
         <code>talents=</code>, <code>class_talents=</code>, and <code>spec_talents=</code>. Additinally you can override
         items of the base profile but only the talent tree is shown on the web-frontend. So use item overrides
-        sparringly.
+        sparingly.
     </p>
     <h5>How to update</h5>
     <p>
