--- a/general_website/templates/general_website/layout/messages.html
+++ b/general_website/templates/general_website/layout/messages.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
 {% for message in messages %}
-<div class="alert {{ message.tags }} alert-dismissable" role="alert">
+<div class="bg-dark alert {{ message.tags }} alert-dismissable" role="alert">
     <!-- <button type="button" class="close" data-dismiss="alert" aria-label="{% translate 'close' %}">&#215;</button> -->
     {{ message | safe }}
 </div>
