add power infusion and weapon enchants

--- a/general_website/templates/general_website/chart_information/class_and_spec_information_importer.html
+++ b/general_website/templates/general_website/chart_information/class_and_spec_information_importer.html
@@ -20,3 +20,7 @@ example import of simulation type and spec specific disclaimer
 {% if windfury %}
 {% include 'general_website/chart_information/disclaimers/windfury_totem.html' %}
 {% endif %}
+
+{% if power_infusion %}
+{% include 'general_website/chart_information/disclaimers/power_infusion.html' %}
+{% endif %}
