--- a/general_website/templates/general_website/chart.html
+++ b/general_website/templates/general_website/chart.html
@@ -228,10 +228,11 @@
 {% include 'general_website/chart_information/class_and_spec_information_importer.html' %}
 
 <!-- <div align="center"> -->
-<div id="chart" class="bloodmallet_chart mt-3" {% if general_result or windfury %} data-wow-class="{{ wow_class }}"
-    data-wow-spec="{{ wow_spec }}" data-fight-style="{{ fight_style }}" data-type="{{ simulation_type }}" {% else %}
-    data-chart-id="{{ chart_id }}" {% endif %} data-language="{{ LANGUAGE_CODE }}" data-entries="10000"
-    data-background-color="transparent" data-value-style="relative"></div>
+<div id="chart" class="bloodmallet_chart mt-3" {% if general_result or windfury or power_infusion %}
+    data-wow-class="{{ wow_class }}" data-wow-spec="{{ wow_spec }}" data-fight-style="{{ fight_style }}"
+    data-type="{{ simulation_type }}" {% else %} data-chart-id="{{ chart_id }}" {% endif %}
+    data-language="{{ LANGUAGE_CODE }}" data-entries="10000" data-background-color="transparent"
+    data-value-style="relative"></div>
 
 {% if additional_fight_styles %}
 {% for fight_style in additional_fight_styles %}
